sidemenu tamamlandi + ProjectCtrl

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,11 +1,8 @@
-<ion-modal-view>
-  <ion-header-bar>
-    <h1 class="title">Login</h1>
-    <div class="buttons">
-      <button class="button button-clear" ng-click="closeLogin()">Close</button>
-    </div>
+<ion-modal-view style="background-image: url(http://wallpapercave.com/wp/ToYo4Ig.jpg);">
+  <ion-header-bar class="bar bar-dark">
+    <h1 class="title ">Login</h1>
   </ion-header-bar>
-  <ion-content>
+  <ion-content style="opacity : 0.95;margin-top: 200px">
     <form ng-submit="doLogin()">
       <div class="list">
         <label class="item item-input">
