done . sadece db kaldı

--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -22,15 +22,17 @@
           <button class="button button-block button-positive" type="submit">Log in</button>
         </label>
        <div class="title" style="font-size:small;">
-          Forgot your login details? <strong><a style="color: black;text-decoration: none;" href = "#/register">Get Help signing in</a></strong>
+          Forgot your login details? <strong><a style="color: black;text-decoration: none;" ng-click="getHelp()">Get Help signing in</a></strong>
         </div>
 
       </div>
     </form>
   </ion-content>
-  <div class="bar bar-footer">
-    <div class="title" style="font-size:small;">
-      Don't have an account? <strong><a style="color: black;text-decoration: none;" href = "#/register">Sign up now!</a></strong>
+  <!-- 
+    <div class="bar bar-footer">
+      <div class="title" style="font-size:small;">
+        Don't have an account? <strong><a style="color: black;text-decoration: none;" href = "#!/register">Sign up now!</a></strong>
+      </div>
     </div>
-  </div>
+  -->
 </ion-modal-view>
