--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -30,7 +30,7 @@
   </ion-content>
   <div class="bar bar-footer">
     <div class="title" style="font-size:small;">
-      Already have an account? <strong><a style="color:black;text-decoration: none;" href = "#/login">Sign in now!</a></strong>
+      Already have an account? <strong><a style="color:black;text-decoration: none;" href = "#!/login">Sign in now!</a></strong>
     </div>
   </div>
 </ion-modal-view>
