--- a/www/templates/main.html
+++ b/www/templates/main.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="true"></ion-side-menus>
 <ion-view view-title="Main Page">
   <ion-content style="background-image: url(http://www.catalyzeme.com/images/background.jpg);">
-    <h1><br>Welcome to Album-Facere app</h1>
+    <h1><br>Album-Facere</h1>
   </ion-content>
 </ion-view>
