--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -31,7 +31,7 @@
   <!-- 
     <div class="bar bar-footer">
       <div class="title" style="font-size:small;">
-        Don't have an account? <strong><a style="color: black;text-decoration: none;" href = "#!/register">Sign up now!</a></strong>
+        Don't have an account? <strong><a style="color: black;text-decoration: none;" href = "#/register">Sign up now!</a></strong>
       </div>
     </div>
   -->
